cf_analysis_results/checkerframework_results/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8.txt
../../../../datasets/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/javax/el/ListELResolver.java:164: error: (return) $$ 2 $$ @MustCallUnknown Object $$ @MustCall Object $$ ( 7073, 7079 ) $$ incompatible types in return.
		return result;
		       ^
  type of expression: @MustCallUnknown Object
  method return type: @MustCall Object
../../../../datasets/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/javax/el/ExpressionFactory.java:223: error: (return) $$ 2 $$ @MustCallUnknown ExpressionFactory $$ @MustCall ExpressionFactory $$ ( 9592, 9631 ) $$ incompatible types in return.
			return (ExpressionFactory) clazz.newInstance();
			       ^
  type of expression: @MustCallUnknown ExpressionFactory
  method return type: @MustCall ExpressionFactory
../../../../datasets/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/javax/el/ExpressionFactoryTest.java:30: error: (required.method.not.called) $$ 4 $$ method close $$ input $$ java.io.InputStream $$ regular method exit $$ ( 1066, 1145 ) $$ @MustCall method close may not have been invoked on input or any of its aliases.
		InputStream input = getClass().getClassLoader().getResourceAsStream(serviceId);
		            ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/javax/el/MapELResolver.java:199: error: (return) $$ 2 $$ @MustCallUnknown Object $$ @MustCall Object $$ ( 8527, 8533 ) $$ incompatible types in return.
		return result;
		       ^
  type of expression: @MustCallUnknown Object
  method return type: @MustCall Object
../../../../datasets/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/de/odysseus/el/TestCase.java:38: error: (required.method.not.called) $$ 4 $$ method close $$ out $$ java.io.ObjectOutput $$ possible exceptional exit due to out.writeObject(value) with exception type java.io.IOException $$ ( 1336, 1384 ) $$ @MustCall method close may not have been invoked on out or any of its aliases.
		ObjectOutput out = new ObjectOutputStream(bout);
		             ^
  The type of object is: java.io.ObjectOutput.
  Reason for going out of scope: possible exceptional exit due to out.writeObject(value) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/de/odysseus/el/TestCase.java:46: error: (required.method.not.called) $$ 4 $$ method close $$ in $$ java.io.ObjectInput $$ possible exceptional exit due to in.readObject() with exception type java.lang.ClassNotFoundException $$ ( 1602, 1646 ) $$ @MustCall method close may not have been invoked on in or any of its aliases.
		ObjectInput in = new ObjectInputStream(bin);
		            ^
  The type of object is: java.io.ObjectInput.
  Reason for going out of scope: possible exceptional exit due to in.readObject() with exception type java.lang.ClassNotFoundException
../../../../datasets/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/de/odysseus/el/tree/impl/ast/AstNode.java:35: error: (return) $$ 2 $$ @MustCallUnknown Object $$ @MustCall Object $$ ( 1191, 1196 ) $$ incompatible types in return.
		return value;
		       ^
  type of expression: @MustCallUnknown Object
  method return type: @MustCall Object
../../../../datasets/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/de/odysseus/el/tree/impl/ast/AstProperty.java:152: error: (assignment) $$ 2 $$ capture#186 extends @MustCallUnknown Object $$ @MustCall Object $$ ( 5478, 5507 ) $$ incompatible types in assignment.
				value = bindings.convert(value, type);
				                        ^
  found   : capture#186 extends @MustCallUnknown Object
  required: @MustCall Object
../../../../datasets/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/de/odysseus/el/tree/impl/ast/AstFunction.java:66: error: (assignment) $$ 2 $$ capture#40 extends @MustCallUnknown Object $$ @MustCall Object $$ ( 2206, 2239 ) $$ incompatible types in assignment.
						params[i] = bindings.convert(param, types[i]);
						                            ^
  found   : capture#40 extends @MustCallUnknown Object
  required: @MustCall Object
../../../../datasets/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/de/odysseus/el/tree/impl/ast/AstFunction.java:108: error: (assignment) $$ 2 $$ capture#447 extends @MustCallUnknown Object $$ @MustCall Object $$ ( 3859, 3892 ) $$ incompatible types in assignment.
						params[i] = bindings.convert(param, types[i]);
						                            ^
  found   : capture#447 extends @MustCallUnknown Object
  required: @MustCall Object
../../../../datasets/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/de/odysseus/el/tree/impl/ast/AstIdentifier.java:108: error: (assignment) $$ 2 $$ capture#53 extends @MustCallUnknown Object $$ @MustCall Object $$ ( 3504, 3533 ) $$ incompatible types in assignment.
				value = bindings.convert(value, type);
				                        ^
  found   : capture#53 extends @MustCallUnknown Object
  required: @MustCall Object
../../../../datasets/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/de/odysseus/el/ExpressionFactoryImpl.java:435: error: (return) $$ 2 $$ capture#571 extends @MustCallUnknown Object $$ @MustCall Object $$ ( 16113, 16147 ) $$ incompatible types in return.
		return converter.convert(obj, targetType);
		                        ^
  type of expression: capture#571 extends @MustCallUnknown Object
  method return type: @MustCall Object
../../../../datasets/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/de/odysseus/el/ObjectValueExpression.java:79: error: (return) $$ 2 $$ capture#807 extends @MustCallUnknown Object $$ @MustCall Object $$ ( 2303, 2334 ) $$ incompatible types in return.
		return converter.convert(object, type);
		                        ^
  type of expression: capture#807 extends @MustCallUnknown Object
  method return type: @MustCall Object
../../../../datasets/june2020_dataset/url4fdf79ae2c_beckchr_juel_tgz-pJ8-de_odysseus_el_samples_xml_sax_XMELFilterJ8/src/de/odysseus/el/tree/impl/ast/AstText.java:71: error: (return) $$ 2 $$ @MustCallUnknown Object $$ @MustCall Object $$ ( 2028, 2092 ) $$ incompatible types in return.
		return returnType == null ? value : bindings.convert(value, returnType);
		                          ^
  type of expression: @MustCallUnknown Object
  method return type: @MustCall Object
14 errors
